compiled/microservices/stores/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stores
  namespace: stores
spec:
  replicas: 4
  selector:
    matchLabels:
      app: stores
  template:
    metadata:
      labels:
        app: stores
    spec:
      containers:
        - name: stores
          image: 'myorg/stores:1.2.0'
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              port: 3000
              path: /
        - name: super-sidecar
          image: 'myorg/sidecar:v1.0.0'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 2
