compiled/microservices/stores/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stores
  namespace: stores
spec:
  selector:
    app: stores
  ports:
    - name: http
      targetPort: 3000
      port: 3000
