compiled/microservices/stores/10-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stores
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
  namespace: stores
spec:
  rules:
    - host: stores.example.com
      http:
        paths:
          - backend:
              serviceName: stores
              servicePort: 3000
  tls:
    - hosts:
        - stores.example.com
      secretName: stores-tls
